# kicad2vlogspice

./: DOIT  README.md  pyproject.toml
src/kicad2vlogspice/: common.py  main.py  renamer.py
src/kicad2vlogspice/parsers/: kicad_net_parser.py  spice_parser.py  verilog_parser.py
tests/: test_conversion_pipeline.py
tests/out1/: A64-OlinuXino_Rev_H.sp  A64-OlinuXino_Rev_H.v  ATMEGA328_Motor_Board.sp  ATMEGA328_Motor_Board.v  HDMI2USB.sp  HDMI2USB.v  Thermal_Camera.sp  Thermal_Camera.v  anavi-macro-pad-10.sp  anavi-macro-pad-10.v  buffering_test.v  components.sp  components.v  edu-ciaa-nxp.sp  edu-ciaa-nxp.v  instance_array.sp  instance_array.v  kicad-pyspice-example.sp  kicad-pyspice-example.v  kicad9_test.sp
tests/out2s/: A64-OlinuXino_Rev_H.sp  A64-OlinuXino_Rev_H.v  ATMEGA328_Motor_Board.sp  ATMEGA328_Motor_Board.v  HDMI2USB.sp  HDMI2USB.v  Thermal_Camera.sp  Thermal_Camera.v  anavi-macro-pad-10.sp  anavi-macro-pad-10.v  buffering_test.sp  buffering_test.v  components.sp  components.v  div.sp  edu-ciaa-nxp.sp  edu-ciaa-nxp.v  instance_array.sp  instance_array.v  kicad-pyspice-example.sp  kicad-pyspice-example.v  kicad9_test.v
tests/out2v/: A64-OlinuXino_Rev_H.sp  A64-OlinuXino_Rev_H.v  ATMEGA328_Motor_Board.sp  ATMEGA328_Motor_Board.v  HDMI2USB.sp  HDMI2USB.v  Thermal_Camera.sp  Thermal_Camera.v  anavi-macro-pad-10.sp  anavi-macro-pad-10.v  buffering_test.sp  buffering_test.v  components.sp  components.v  div.sp  div.v  edu-ciaa-nxp.sp  edu-ciaa-nxp.v  instance_array.sp  instance_array.v  kicad-pyspice-example.sp  kicad-pyspice-example.v  kicad9_test.sp
(+11 files in other folders)
